# crescendo-backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  db.sqlite  docker-compose.yml  fly.toml  manage.py  mypy.ini  nginx.conf  pyproject.toml  reinstall_requirements.sh  requirements.txt  reset_db.sh
.github/workflows/: deploy.yml  show_whoami.yml
accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0004_alter_user_username.py
apps/accounts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_updated_at.py  0003_user_is_admin.py  0005_alter_user_options_alter_user_email_and_more.py
apps/accounts/models/: __init__.py  user.py
apps/accounts/serializers/: __init__.py  login.py  profile.py
apps/accounts/tests/: test_google_login.py  test_logout.py  test_profile_by_uuid.py  test_token_refresh.py  tests.py
apps/accounts/views/: __init__.py  login.py  (+3 more)
apps/core/: serializers.py
apps/studygroup/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
common/exceptions/: serailizers.py
config/: urls.py
config/settings/: default.py  development.py  test.py
core/: __init__.py  cli.py  containers.py  extensions.py  factory.py  urls.py
core/config/: default.py  dev.py  prod.py  test.py
core/entities/: base_entity.py  filtering.py  pagination.py  sorting.py
core/factory/: app_factory.py  extensions.py
core/marshaller/: base_marshaller.py
core/models/: base_model.py  mixins.py
core/repositories/: base.py  baserepository.py  condition.py  crud.py  sqlalchemy.py  test_repository.py  test_sqlalchemy_repository.py  type.py
core/resources/: base.py  base_resource.py  parsers.py
core/schemas/: fields.py  filtering.py  paginate.py  pagination.py  request.py  response.py  sorting.py
core/services/: base.py
core/settings/: default.py  development.py  production.py
core/utils/: basemodel.py  baserepository.py  mapper.py
crescenders/auth/: resources.py
crescenders/users/: __init__.py  models.py  repositories.py  resources.py  schemas.py  services.py  userdto.py
crescendo/auth/: __init__.py  containers.py  entities.py  models.py  repositories.py  resources.py  schemas.py  services.py
crescendo/exceptions/: service_exceptions.py
crescendo/study/: __init__.py  containers.py  entities.py  models.py  repositories.py  resources.py  schemas.py  services.py
crescendo/users/: __init__.py  container.py  containers.py  fields.py  marshallers.py  models.py  repositories.py  resources.py  schemas.py  services.py
factory/: __init__.py
factory/config/: dev.py  prod.py  test.py
fixtures/: category.json  tag.json
migrations/versions/: 00021567547c_.py  09f4861cbacf_.py  0ce62301a77c_.py  0ed38e40c379_.py  17f094f9808c_.py  2f3a3ba7fc3f_.py  37bb5bd6a7d2_.py  39b9c270d4b4_.py  3f3c4588618e_.py  4e5905cc08fa_.py  527f3b5ee5cd_.py  606646dcf9d7_.py  6efcf0e1f84a_.py  7aa80c778e19_.py  7d7a5211d824_.py  807142730228_.py  82bddfe4d4ad_.py  ab8f093a0880_.py  bad5a5194781_.py  c3790d26f0f2_.py  c7d1172c649e_.py  ce3f4b0eecee_.py  d7eddb3a7dee_.py  ddaffb2517bc_.py  f7cfbcd9eb81_.py
requirements/: default.txt  dev.txt
studygroup/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
studygroup/migrations/: 0001_initial.py  0002_alter_category_options_alter_studygroup_options_and_more.py  0003_remove_category_description.py
tests/auth/: test_integration.py  test_resources.py
tests/study/: test_integration.py
(+85 files in other folders)
