[tool.poetry]
name = "crescendo"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Django
django = "^4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-storages = "^1.13.2"
dj-rest-auth = "^4.0.1"
django-allauth = "^0.54.0"
drf-spectacular = "^0.26.4"
# Database
cx-oracle = "^8.3.0"
# Storage
boto3 = "^1.28.12"
# Deploy
gunicorn = "^21.2.0"
# Python utils
python-dotenv = "^1.0.0"
pillow = "^10.0.0"



[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
ipython = "^8.14.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
flake8 = "^6.1.0"
pyright = "^1.1.320"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
