[tool.poetry]
name = "crescendo"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Django
django = "^4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-storages = "^1.13.2"
dj-rest-auth = "4.0.1"
django-allauth = "0.54.0"
drf-spectacular = "^0.26.4"
django-cors-headers = "^4.2.0"
django-filter = "^23.2"
django-jazzmin = "^2.6.0"
# Database
cx-oracle = "^8.3.0"
# Deploy
gunicorn = "^21.2.0"
# Python utils
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
django-stubs-ext = "^4.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
ipython = "^8.14.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
flake8 = "^6.1.0"
django-stubs = "^4.2.3"
djangorestframework-stubs = "^3.14.2"
coverage = "^7.3.1"
factory-boy = "^3.3.0"

[tool.mypy]
python_version = "3.11"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
ignore_missing_imports = "true"
disallow_any_generics = "false"
strict = "true"
exclude = [
    "migrations",
    "settings",
    "manage.py",
    "tests.py"
]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests.py",
    "*/migrations/*",
    "*/settings/*",
    "*/admin.py",
    "manage.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
